# silkworm

./: .dockerignore  .gitignore  AGENT.md  DOCKER.md  Dockerfile  README.md  compose.yaml  justfile  justfile-3.14t  pyproject.toml
.github/workflows/: database-integration-tests.yml  examples.yml  release.yml  tests.yml
docs/: README.md  api-reference.md  core-concepts.md  getting-started.md
examples/: export_formats_demo.py  hackernews_spider.py  hybrid_logger_demo.py  lobsters_spider.py  logger_configuration_demo.py  quotes_spider.py  quotes_spider_trio.py  quotes_spider_winloop.py  quotes_spider_xpath.py  sitemap_spider.py  taskiq_quotes_spider.py  url_titles_spider.py
src/silkworm/: __init__.py  _types.py  api.py  cdp.py  engine.py  http.py  logging.py  middlewares.py  pipelines.py  request.py  response.py  runner.py  spiders.py
tests/: conftest.py  test_cdp.py  test_engine_queue.py  test_pipelines.py  test_runner.py  test_runner_trio.py  test_silkworm_core.py  test_spider_logger.py  test_statistics.py
tests/integration/: README.md  conftest.py  test_pipeline_integration.py  test_xpath_integration.py
