[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "silkworm-rs"
version = "0.1.8"
description = "Async-first web scraping framework built on rnet and scraper-rs"
authors = [
  { name = "Yehor Smoliakov", email = "egorsmkv@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "web-scraping",
  "crawler",
  "asyncio",
  "http",
  "html",
  "spider",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

dependencies = [
  "rnet>=2.4",
  "scraper-rust>=0.2.7",
  "logly>=0.1.6",
  "orjson>=3.11.5",
]

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pydantic>=2.12.5",
  "pytest",
  "pytest-anyio",
  "ruff",
  "twine",
]

[project.urls]
Homepage = "https://github.com/BitingSnakes/silkworm"
Repository = "https://github.com/BitingSnakes/silkworm"
Issues = "https://github.com/BitingSnakes/silkworm/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/silkworm"]
force-include = {"src/silkworm/py.typed" = "silkworm/py.typed"}

[dependency-groups]
dev = [
    "build",
    "memray>=1.19.1",
    "mypy",
    "py-spy>=0.4.1",
    "pydantic>=2.12.5",
    "pytest",
    "pytest-anyio",
    "ruff",
    "twine",
]
