[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "silkworm-rs"
version = "0.2.7"
description = "Async-first web scraping framework built on rnet and scraper-rs"
authors = [
  { name = "Yehor Smoliakov", email = "egorsmkv@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
keywords = [
  "web-scraping",
  "crawler",
  "asyncio",
  "http",
  "html",
  "spider",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

dependencies = [
  "rnet>=3.0.0rc14",
  "scraper-rust>=0.2.12",
  "logly>=0.1.6",
  "rxml>=2.3.6",
  "asyncio>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pydantic>=2.12.5",
  "pytest",
  "pytest-anyio",
  "ruff",
  "twine",
]
taskiq = [
  "taskiq>=0.11.0",
]
uvloop = [
  "uvloop>=0.19.0",
]
trio = [
  "trio>=0.23.0",
  "trio-asyncio>=0.13.0",
]
msgpack = [
  "ormsgpack>=1.7.0",
]
polars = [
  "polars>=1.0.0",
]
excel = [
  "openpyxl>=3.1.0",
]
yaml = [
  "pyyaml>=6.0",
]
avro = [
  "fastavro>=1.9.0",
]
elasticsearch = [
  "elasticsearch>=8.0.0",
]
mongodb = [
  "motor>=3.3.0",
]
s3 = [
  "opendal>=0.45.0",
]
vortex = [
  "vortex-data>=0.50.0",
]
mysql = [
  "aiomysql>=0.2.0",
]
postgresql = [
  "asyncpg>=0.29.0",
]
gsheets = [
  "google-api-python-client>=2.0.0",
  "google-auth>=2.0.0",
]
snowflake = [
  "snowflake-connector-python>=3.0.0",
]
ftp = [
  "aioftp>=0.22.0",
]
sftp = [
  "asyncssh>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/BitingSnakes/silkworm"
Repository = "https://github.com/BitingSnakes/silkworm"
Issues = "https://github.com/BitingSnakes/silkworm/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/silkworm"]
force-include = {"src/silkworm/py.typed" = "silkworm/py.typed"}

[dependency-groups]
dev = [
    "build",
    "memray>=1.19.1",
    "mypy",
    "py-spy>=0.4.1",
    "pydantic>=2.12.5",
    "pytest",
    "pytest-anyio",
    "ruff",
    "twine",
]
